Enabling the app on Open Liberty

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <jwt.id>myMpJwt</jwt.id>
         <jwksUri>https://auth:9443/oidc/endpoint/OP/jwk</jwksUri>
         <jwksIssuer>https://auth:9443/oidc/endpoint/OP</jwksIssuer>
-        <administratorRealm>user:https://auth:9443/oidc/endpoint/OP/user</administratorRealm>
+        <administratorRealm>https://auth:9443/oidc/endpoint/OP/user</administratorRealm>
 
         <app.name>customer</app.name>
         <testServerHttpPort>9080</testServerHttpPort>
@@ -22,6 +22,9 @@
         <warContext>${app.name}</warContext>
         <package.file>${project.build.directory}/${project.artifactId}-${project.version}.zip</package.file>
         <packaging.type>usr</packaging.type>
+        <groupId.liberty-runtime>com.ibm.websphere.appserver.runtime</groupId.liberty-runtime>
+        <artifactId.liberty-runtime>wlp-webProfile7</artifactId.liberty-runtime>
+        <version.liberty-runtime>18.0.0.3</version.liberty-runtime>
     </properties>
 
     <dependencies>
@@ -95,6 +98,11 @@
             <version>2.0.2-beta</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-api</artifactId>
+            <version>0.30.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -132,15 +140,17 @@
                 <artifactId>liberty-maven-plugin</artifactId>
                 <version>2.4.2</version>
                 <configuration>
-                    <install>
-                        <runtimeUrl>https://public.dhe.ibm.com/ibmdl/export/pub/software/websphere/wasdev/downloads/wlp/18.0.0.2/wlp-webProfile8-18.0.0.2.zip</runtimeUrl>
-                    </install>
+                    <assemblyArtifact>
+                      <groupId>${groupId.liberty-runtime}</groupId>
+                      <artifactId>${artifactId.liberty-runtime}</artifactId>
+                      <version>${version.liberty-runtime}</version>
+                      <type>zip</type>
+                    </assemblyArtifact>
                     <configFile>${basedir}/src/main/liberty/config/server.xml</configFile>
                     <serverEnv>${basedir}/src/main/liberty/config/server.env</serverEnv>
                     <jvmOptionsFile>${basedir}/src/main/liberty/config/jvm.options</jvmOptionsFile>
                     <packageFile>${package.file}</packageFile>
                     <include>${packaging.type}</include>
-                    <stripVersion>true</stripVersion>
                     <bootstrapProperties>
                         <app.location>${project.artifactId}-${project.version}.war</app.location>
                         <default.http.port>${testServerHttpPort}</default.http.port>
@@ -149,6 +159,7 @@
                     <features>
                         <acceptLicense>true</acceptLicense>
                     </features>
+                    <looseApplication>false</looseApplication>
                 </configuration>
                 <executions>
                     <execution>
@@ -255,6 +266,14 @@
             <properties>
                 <package.file>${project.build.directory}/${app.name}.jar</package.file>
                 <packaging.type>runnable</packaging.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>openliberty</id>
+            <properties>
+                <groupId.liberty-runtime>io.openliberty</groupId.liberty-runtime>
+                <artifactId.liberty-runtime>openliberty-runtime</artifactId.liberty-runtime>
+                <version.liberty-runtime>RELEASE</version.liberty-runtime>
             </properties>
         </profile>
     </profiles>
