--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -32,6 +32,8 @@ hs256key:
 global:
   hs256key:
     secretName:
+  istio:
+    enabled:
 
 testUser:
   createUser: true
@@ -62,3 +64,13 @@ labels:
   app: customer
   version: v1
   tier: backend
+
+istio:
+  enabled: false
+  # ISTIO_MUTUAL, SIMPLE, DISABLE
+  mTLS: ISTIO_MUTUAL
+  # LEAST_CONN, ROUND_ROBIN
+  loadBalancer: LEAST_CONN
+  enableGateway: false
+  httpsRedirect: false
+  hosts:
