--- a/chart/customer/templates/pre_a_create_user.yaml
+++ b/chart/customer/templates/pre_a_create_user.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.testUser.createUser }}
+{{- if not (or .Values.global.istio.enabled .Values.istio.enabled) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -34,4 +35,5 @@ spec:
         env:
         {{- include "customer.testuser.environmentvariables" . | indent 8 }}
         {{- include "customer.hs256key.environmentvariables" . | indent 8 }}
+{{- end }}
 {{- end }}
