--- a/chart/customer/templates/istio_virtual_services.yaml
+++ b/chart/customer/templates/istio_virtual_services.yaml
@@ -4,8 +4,16 @@ kind: VirtualService
 metadata:
   name: {{ template "customer.fullname" . }}
 spec:
+  {{- if .Values.istio.enableGateway }}
   hosts:
-    - {{ template "customer.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
+  {{- if .Values.istio.hosts }}
+{{ toYaml .Values.istio.hosts | indent 2 }}
+  {{- else if .Values.istio.enableGateway }}
+  - "*"
+  {{- end }}
+  gateways:
+  - {{ template "customer.fullname" . }}-gateway
+  {{- end }}
   http:
   - route:
     - destination:
