--- a/chart/customer/templates/istio_virtual_services.yaml
+++ b/chart/customer/templates/istio_virtual_services.yaml
@@ -4,13 +4,15 @@ kind: VirtualService
 metadata:
   name: {{ template "customer.fullname" . }}
 spec:
-  {{- if .Values.istio.enableGateway }}
   hosts:
-  {{- if .Values.istio.hosts }}
+  {{- if and .Values.istio.enableGateway .Values.istio.hosts }}
 {{ toYaml .Values.istio.hosts | indent 2 }}
-  {{- else }}
+  {{- else if .Values.istio.enableGateway }}
   - "*"
+  {{- else }}
+  - {{ template "customer.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
   {{- end }}
+  {{- if .Values.istio.enableGateway }}
   gateways:
   - {{ template "customer.fullname" . }}-gateway
   {{- end }}
