--- a/chart/customer/templates/ingress.yaml
+++ b/chart/customer/templates/ingress.yaml
@@ -3,37 +3,23 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "customer.fullname" . }}
-  {{- if .Values.ingress.ibmCloud.redirectToHTTPS }}
+{{- if .Values.ingress.annotations }}
   annotations:
-   ingress.bluemix.net/redirect-to-https: "True"
-  {{- end }}
+{{ toYaml .Values.ingress.annotations | indent 4 }}
+{{- end }}
   labels:
     {{- include "customer.labels" . | indent 4 }}
 spec:
-  {{- if .Values.tls.enabled }}
-  tls:
-  - hosts:
-    {{- if .Values.ingress.hostname }}
-    - {{ .Values.ingress.hostname }}
-    {{- else }}
-    - {{ template "customer.fullname" . }}
-    {{- end }}
-    {{- if .Values.tls.secretName }}
-    secretName: {{ .Values.tls.secretName }}
-    {{- else }}
-    secretName: {{ .Release.Name }}-{{ .Chart.Name }}-tls
-    {{- end }}
-  {{- end }}
   rules:
-  {{- if .Values.ingress.hostname }}
-  - host: {{ .Values.ingress.hostname }}
-  {{- else }}
-  - host: {{ template "customer.fullname" . }}
-  {{- end }}
+  - host: {{ .Values.ingress.hostname | quote }}
     http:
       paths:
       - path: {{ .Values.ingress.path }}
         backend:
           serviceName: {{ template "customer.fullname" . }}
           servicePort: {{ .Values.service.externalPort }}
+{{- if .Values.ingress.enableTLS }}
+  tls:
+{{ toYaml .Values.ingress.TLS | indent 2 }}
+{{- end }}
 {{- end }}
