--- a/chart/customer/templates/istio_virtual_service.yaml
+++ b/chart/customer/templates/istio_virtual_service.yaml
@@ -5,19 +5,17 @@ metadata:
   name: {{ template "customer.fullname" . }}
 spec:
   hosts:
-  {{- if and .Values.istio.enableGateway .Values.istio.hosts }}
-{{ toYaml .Values.istio.hosts | indent 2 }}
-  {{- else if .Values.istio.enableGateway }}
-  - "*"
+  {{- if or .Values.istio.gateway.enabled .Values.istio.gateway.name }}
+  {{ toYaml .Values.istio.gateway.hosts }}
   {{- else }}
   - {{ template "customer.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
   {{- end }}
-  {{- if .Values.istio.enableGateway }}
-  gateways:
-  - {{ template "customer.fullname" . }}-gateway
-  {{- end }}
+  {{- template "customer.istio.gateway" . }}
   http:
-  - route:
+  - match:
+    - uri:
+        prefix: {{ .Values.ingress.path }}
+    route:
     - destination:
         host: {{ template "customer.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
         port:
