--- a/chart/customer/templates/deployment.yaml
+++ b/chart/customer/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         - containerPort: {{ .Values.service.internalPort }}
           protocol: TCP
         env:
+        {{- include "customer.environmentvariables" . | indent 8 }}
         {{- include "customer.couchdb.environmentvariables" . | indent 8 }}
         {{- include "customer.hs256key.environmentvariables" . | indent 8 }}
         resources:
