--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ server:
   context-path: /micro
   port: ${SERVICE_PORT:8082}
 
+management:
+  port: ${MANAGEMENT_PORT:8092}
+
 # Spring properties
 spring:
   application:
