--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
       - curl http://127.0.0.1:5985
       script:
       # Gradle Build
-      - ./gradlew build -x test
+      - ./gradlew build
       # Start Application
       - java -jar build/libs/micro-${RELEASE_NAME}-0.0.1.jar &
       # Let the application start
@@ -89,7 +89,7 @@ jobs:
       # Install CouchDB
       - helm upgrade --install couchdb --version 0.2.2 --set service.externalPort=5985,fullnameOverride=${RELEASE_NAME}-couchdb,createAdminSecret=true,adminUsername=${COUCHDB_USER},adminPassword=${COUCHDB_PASSWORD},clusterSize=1,persistentVolume.enabled=false incubator/couchdb
       # Wait for CouchDB to start
-      #- kubectl rollout status statefulset/${RELEASE_NAME}-couchdb-couchdb
+      - kubectl rollout status statefulset/${RELEASE_NAME}-couchdb-couchdb
       script:
       # Build Docker image
       - docker build -t "${IMAGE_NAME}:${TAG}" .
@@ -103,10 +103,10 @@ jobs:
       # Get Deployment Name
       - DEPLOYMENT="deployment/${RELEASE_NAME}-${CHART_NAME}"
       # Wait for deployment to be ready
+      - kubectl logs -f ${DEPLOYMENT} &
       - kubectl rollout status ${DEPLOYMENT}
       # Port Forwarding
       - kubectl port-forward ${DEPLOYMENT} ${SERVICE_PORT} ${MANAGEMENT_PORT} &
-      - kubectl logs -f ${DEPLOYMENT} &
       - echo "Sleeping for 3 seconds while connection is established..."
       - sleep 3
       # Let the application start
