--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,8 @@ jobs:
       # Install CouchDB
       - helm upgrade --install couchdb --version 0.2.2 --set service.externalPort=5985,fullnameOverride=${RELEASE_NAME}-couchdb,createAdminSecret=true,adminUsername=${COUCHDB_USER},adminPassword=${COUCHDB_PASSWORD},clusterSize=1,persistentVolume.enabled=false incubator/couchdb
       # Wait for CouchDB to start
+      - kubectl logs -f customer-couchdb-couchdb-0 &
+      - kubectl get pods -w &
       - kubectl rollout status statefulset/${RELEASE_NAME}-couchdb-couchdb
       script:
       # Build Docker image
@@ -104,6 +106,7 @@ jobs:
       - DEPLOYMENT="deployment/${RELEASE_NAME}-${CHART_NAME}"
       # Wait for deployment to be ready
       - kubectl logs -f ${DEPLOYMENT} &
+      - kubectl get pods -w &
       - kubectl rollout status ${DEPLOYMENT}
       # Port Forwarding
       - kubectl port-forward ${DEPLOYMENT} ${SERVICE_PORT} ${MANAGEMENT_PORT} &
