--- a/.travis.yml
+++ b/.travis.yml
@@ -100,6 +100,9 @@ jobs:
       - helm upgrade --install ${RELEASE_NAME} --set image.repository="${IMAGE_NAME}",image.tag="${TAG}",image.pullPolicy=Never,testUser.createUser=false ${CHART_NAME}-${CHART_VERSION}.tgz
       # Get Deployment Name
       - DEPLOYMENT="deployment/${RELEASE_NAME}-${CHART_NAME}"
+      # Get logs
+      - sleep 30
+      - kubectl logs -f ${DEPLOYMENT} &
       # Wait for deployment to be ready
       - kubectl get pods -w &
       - kubectl rollout status ${DEPLOYMENT}
