- Created environment variable for COUCHDB_DATABASE - Added default value for user creation

--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -55,6 +55,7 @@ couchdb:
   existingSecret:
   adminUsername: user
   adminPassword: passw0rd
+  database: customers
   # Used when using Istio
   headless: customer-couchdb-couchdb
 
