--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-/target
-/.m2
-
-
 /.classpath
 /.project
 /.settings
@@ -25,3 +21,5 @@
 
 src/main/liberty/config/server.env
 /bin/
+.gradle/
+build/
