--- a/cloudant/Dockerfile
+++ b/cloudant/Dockerfile
@@ -1,3 +1,5 @@
 FROM python:3
 ADD populate.py requirements.txt /tmp/
 RUN pip3 install -r tmp/requirements.txt
+ENTRYPOINT ["python3", "tmp/populate.py"]
+CMD ["localhost", "8080"]
