--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -49,7 +49,7 @@ spec:
       # Liberty Server Container
       - name: "{{ .Chart.Name }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
             path: /
@@ -65,26 +65,37 @@ spec:
           initialDelaySeconds: 1500
           timeoutSeconds: 500
         env:
-          - name: host
-            value: "{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}"
+          {{ if .Values.travis }} 
+          - name: jwksUri
+            value: "https://{{ .Values.service.minikubeIp }}:{{ .Values.service.authKubePort }}/oidc/endpoint/OP/jwk"
+          - name: jwksIssuer
+            value: "https://{{ .Values.service.minikubeIp }}:9443/oidc/endpoint/OP"
+          - name: administratorRealm
+            value: "user:https://{{ .Values.service.minikubeIp }}:9443/oidc/endpoint/OP/user"
+          - name: auth_health
+            value: "https://{{ .Values.service.minikubeIp }}:{{ .Values.service.authKubePort }}/health"
+        {{ else }}
+          - name: jwksUri
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
+          - name: jwksIssuer
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
+          - name: administratorRealm
+            value: "user:https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
           - name: auth_health
             value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/health"
+        {{ end }}
+          - name: host
+            value: "{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}"
           - name: PORT
             value: "{{ .Values.service.servicePort }}"
           - name: RELEASE_NAME
             value: "{{ .Release.Name }}"
           - name: jwtid
             value: "{{ .Values.jwt.id }}"
-          - name: jwksUri
-            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
-          - name: jwksIssuer
-            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
           - name: zipkinHost
             value: "{{ .Release.Name }}-{{ .Values.service.zipkinHost }}"
           - name: zipkinPort
             value: "{{ .Values.service.zipkinPort }}"
-          - name: administratorRealm
-            value: "user:https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
         resources:
           requests:
             cpu: "{{ .Values.image.resources.requests.cpu }}"
