--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -7,7 +7,7 @@ image:
   #repository: customer-mp
   repository: ibmcase/customer-mp
   tag: v4.0.0
-  #pullPolicy: IfNotPresent
+  pullPolicy: IfNotPresent
   resources:
     requests:
       cpu: 200m
@@ -22,6 +22,8 @@ service:
   auth: auth
   zipkinHost: zipkin
   zipkinPort: 9411
+  minikubeIp: 10.20.0.169 # Will likely change
+  authKubePort: 9443      # Will likely change
 
 volumes:
   mountPath: /opt/ibm/wlp/usr/shared
@@ -62,3 +64,5 @@ persistence:
   ##
   #storageClass: "-"
   accessMode: ReadWriteOnce
+
+travis: false
