--- a/chart/customer/templates/deployment.yaml
+++ b/chart/customer/templates/deployment.yaml
@@ -34,9 +34,12 @@ spec:
           initialDelaySeconds: 35
           periodSeconds: 20
           failureThreshold: 6
+        securityContext:
+          runAsUser: 2000
+          allowPrivilegeEscalation: false
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
         env:
         {{- include "customer.environmentvariables" . | indent 8 }}
         {{- include "customer.couchdb.environmentvariables" . | indent 8 }}
         {{- include "customer.hs256key.environmentvariables" . | indent 8 }}
-        resources:
-{{ toYaml .Values.resources | indent 10 }}
