--- a/chart/customer/templates/deployment.yaml
+++ b/chart/customer/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
           periodSeconds: 20
           failureThreshold: 6
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+        {{- include "customer.resources" . | indent 10 }}
         securityContext:
         {{- include "customer.securityContext" . | indent 10 }}
         env:
