--- a/chart/customer/templates/pre_a_create_user.yaml
+++ b/chart/customer/templates/pre_a_create_user.yaml
@@ -33,7 +33,7 @@ spec:
             done
         imagePullPolicy: {{ .Values.bash.image.pullPolicy }}
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+        {{- include "customer.resources" . | indent 10 }}
         securityContext:
         {{- include "customer.securityContext" . | indent 10 }}
         env:
