--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -14,7 +14,7 @@ service:
 
 ingress:
   enabled: false
-  hostname: "customer.bluecompute.com"
+  hostname: #customer.bluecompute.com
   path: /micro/customer
   annotations:
     ingress.bluemix.net/redirect-to-https: "True"
