--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,13 +1,13 @@
-# Cloudant
+# CouchDB
 protocol=http
-host=cloudant-service
-port=80
+host=localhost
+port=5984
 
 user=admin
-password=pass
+password=passw0rd
 
 database=customers
-application.rest.client.CloudantClientService/mp-rest/url=http://cloudant-service:80
+application.rest.client.CouchDBClientService/mp-rest/url=http://customer-svc-couchdb:5984
 
 #Auth
-auth_health=https://auth-service:9443/health
+auth_health=https://auth-auth:9443/health
