--- a/chart/customer/templates/customer.yaml
+++ b/chart/customer/templates/customer.yaml
@@ -19,7 +19,9 @@ spec:
     service: server
     release: {{ .Release.Name }}
     implementation: microprofile
+
 ---
+
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -49,56 +51,64 @@ spec:
       # Liberty Server Container
       - name: "{{ .Chart.Name }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: Never
+        # image: customer
+        imagePullPolicy: IfNotPresent
         readinessProbe:
+          httpGet:
+            path: /health
+            port: 9443
+            scheme: HTTPS
+          initialDelaySeconds: 60
+          periodSeconds: 20
+          failureThreshold: 6
+        livenessProbe:
           httpGet:
             path: /
             port: 9443
             scheme: HTTPS
           initialDelaySeconds: 60
-          timeoutSeconds: 60
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 9443
-            scheme: HTTPS
-          initialDelaySeconds: 1500
-          timeoutSeconds: 500
+          periodSeconds: 10
+          failureThreshold: 6
         env:
-          - name: host
-            value: "{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}"
+          {{ if .Values.travis }} 
+          - name: jwksUri
+            value: "https://{{ .Values.service.minikubeIp }}:{{ .Values.service.authKubePort }}/oidc/endpoint/OP/jwk"
+          - name: jwksIssuer
+            value: "https://{{ .Values.service.minikubeIp }}:9443/oidc/endpoint/OP"
+          - name: administratorRealm
+            value: "user:https://{{ .Values.service.minikubeIp }}:9443/oidc/endpoint/OP/user"
           - name: auth_health
-            value: "https://auth-{{ .Values.service.auth }}:9443/health"
+            value: "https://{{ .Values.service.minikubeIp }}:{{ .Values.service.authKubePort }}/health"
+        {{ else }}
+          - name: jwksUri
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
+          - name: jwksIssuer
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
+          - name: administratorRealm
+            value: "user:https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
+          - name: auth_health
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/health"
+        {{ end }}
+          - name: host
+            value: "{{ .Values.service.dbService }}"
           - name: PORT
             value: "{{ .Values.service.servicePort }}"
           - name: RELEASE_NAME
             value: "{{ .Release.Name }}"
           - name: jwtid
             value: "{{ .Values.jwt.id }}"
-          - name: jwksUri
-            value: "https://auth-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
-          - name: jwksIssuer
-            value: "https://auth-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
           - name: zipkinHost
             value: "{{ .Release.Name }}-{{ .Values.service.zipkinHost }}"
           - name: zipkinPort
             value: "{{ .Values.service.zipkinPort }}"
-          - name: administratorRealm
-            value: "user:https://auth-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
         resources:
           requests:
-            cpu: "{{ .Values.image.resources.requests.cpu }}"
             memory: "{{ .Values.image.resources.requests.memory }}"
         volumeMounts:
         - name: keystorevol
           mountPath: "/etc/keystorevol"
           readOnly: true
-        - name: config-volume
-          mountPath: {{ .Values.volumes.mountPath }}
       volumes:
       - name: keystorevol
         secret:
           secretName: keystoresecret
-      - name: config-volume
-        configMap:
-          name: {{ .Release.Name }}-{{ .Chart.Name }}-config
