--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -5,25 +5,24 @@ revisionHistoryLimit: 1
 image:
   #repository: registry.csplab.cloudns.cx/microprofile/customer-mp
   #repository: customer-mp
-  repository: ibmcase/customer-mp
-  tag: v4.0.0
+  repository: customer
+  tag: latest
   pullPolicy: IfNotPresent
   resources:
     requests:
-      cpu: 200m
-      memory: 300Mi
+      memory: 64Mi
 
 service:
   name: customer
-  cloudantservicename: cloudant-service
+  dbService: customer-svc-couchdb
   type: NodePort
   servicePort: 9080
   servicePortHttps: 9443
   auth: auth
   zipkinHost: zipkin
   zipkinPort: 9411
-  minikubeIp: 10.20.0.169 # Will likely change
-  authKubePort: 9443      # Will likely change
+  minikubeIp:
+  authKubePort:
 
 volumes:
   mountPath: /opt/ibm/wlp/usr/shared
@@ -39,18 +38,16 @@ base:
 jwt:
   id: myMpJwt
 
-cloudant:
-  user: admin
-  password: pass
+couchdb:
+  host: customer-svc-couchdb
   protocol: http
-  host: localhost
-  type: NodePort
-  port: 80
-  nodeport: 31222
+  port: 5984
+  existingSecret:
+  adminUsername: admin
+  adminPassword: passw0rd
   database: customers
-  #image: registry.csplab.cloudns.cx/microprofile/populate
-  image: ibmcase/populate
-  #image: populate
+  # Used when using Istio
+  headless: customer-couchdb-couchdb
 
 ## Persist data to a persistent volume
 persistence:
